tests/snapshots/tokenize__include_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(add) at 3:5\n( at 3:8\nint at 3:9\nIdentifier(a) at 3:13\n, at 3:14\nint at 3:16\nIdentifier(b) at 3:20\n) at 3:21\n{ at 3:23\nreturn at 4:5\nIdentifier(a) at 4:12\n+ at 4:14\nIdentifier(b) at 4:16\n; at 4:17\n} at 5:1\nint at 7:1\nIdentifier(multiply) at 7:5\n( at 7:13\nint at 7:14\nIdentifier(a) at 7:18\n, at 7:19\nint at 7:21\nIdentifier(b) at 7:25\n) at 7:26\n{ at 7:28\nreturn at 8:5\nIdentifier(a) at 8:12\n* at 8:14\nIdentifier(b) at 8:16\n; at 8:17\n} at 9:1\nint at 11:1\nIdentifier(main) at 11:5\n( at 11:9\n) at 11:10\n{ at 11:12\nreturn at 12:5\nIdentifier(add) at 12:12\n( at 12:15\nIntLiteral(10) at 12:16\n, at 12:18\nIntLiteral(20) at 12:20\n) at 12:22\n+ at 12:24\nIdentifier(multiply) at 12:26\n( at 12:34\nIntLiteral(3) at 12:35\n, at 12:36\nIntLiteral(4) at 12:38\n) at 12:39\n; at 12:40\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
