tests/snapshots/tokenize__kr_function.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(sum) at 1:5\n( at 1:8\nIdentifier(a) at 1:9\n, at 1:10\nIdentifier(b) at 1:12\n) at 1:13\nint at 2:1\nIdentifier(a) at 2:5\n; at 2:6\nchar at 3:1\nIdentifier(b) at 3:6\n; at 3:7\n{ at 4:1\nreturn at 5:5\nIdentifier(a) at 5:12\n+ at 5:14\nIdentifier(b) at 5:16\n; at 5:17\n} at 6:1\nint at 8:1\nIdentifier(mul) at 8:5\n( at 8:8\nIdentifier(a) at 8:9\n, at 8:10\nIdentifier(b) at 8:12\n) at 8:13\nint at 9:1\nIdentifier(a) at 9:5\n; at 9:6\nint at 10:1\nIdentifier(b) at 10:5\n; at 10:6\n{ at 11:1\nreturn at 12:5\nIdentifier(a) at 12:12\n* at 12:14\nIdentifier(b) at 12:16\n; at 12:17\n} at 13:1\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nif at 16:5\n( at 16:8\nIdentifier(sum) at 16:9\n( at 16:12\nIntLiteral(10, None) at 16:13\n, at 16:15\nIntLiteral(5, None) at 16:17\n) at 16:18\n!= at 16:20\nIntLiteral(15, None) at 16:23\n) at 16:25\n{ at 16:27\nreturn at 17:9\nIntLiteral(1, None) at 17:16\n; at 17:17\n} at 18:5\nif at 20:5\n( at 20:8\nIdentifier(mul) at 20:9\n( at 20:12\nIntLiteral(3, None) at 20:13\n, at 20:14\nIntLiteral(4, None) at 20:16\n) at 20:17\n!= at 20:19\nIntLiteral(12, None) at 20:22\n) at 20:24\n{ at 20:26\nreturn at 21:9\nIntLiteral(2, None) at 21:16\n; at 21:17\n} at 22:5\nreturn at 24:5\nIntLiteral(0, None) at 24:12\n; at 24:13\n} at 25:1\nEOF at 26:1\n"
stderr: ""
status: 0
