tests/snapshots/tokenize__limits_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 29:1\nIdentifier(main) at 29:5\n( at 29:9\n) at 29:10\n{ at 29:12\nif at 33:5\n( at 33:8\nIntLiteral(8, None) at 33:9\n!= at 33:11\nIntLiteral(8, None) at 33:14\n) at 33:15\nreturn at 33:17\nIntLiteral(1, None) at 33:24\n; at 33:25\nif at 36:5\n( at 36:8\n( at 36:9\n- at 36:10\nIntLiteral(128, None) at 36:11\n) at 36:14\n!= at 36:16\n- at 36:19\nIntLiteral(128, None) at 36:20\n) at 36:23\nreturn at 36:25\nIntLiteral(2, None) at 36:32\n; at 36:33\nif at 37:5\n( at 37:8\nIntLiteral(127, None) at 37:9\n!= at 37:13\nIntLiteral(127, None) at 37:16\n) at 37:19\nreturn at 37:21\nIntLiteral(3, None) at 37:28\n; at 37:29\nif at 38:5\n( at 38:8\nIntLiteral(255, None) at 38:9\n!= at 38:13\nIntLiteral(255, None) at 38:16\n) at 38:19\nreturn at 38:21\nIntLiteral(4, None) at 38:28\n; at 38:29\nif at 41:5\n( at 41:8\n( at 41:9\n- at 41:10\nIntLiteral(32768, None) at 41:11\n) at 41:16\n!= at 41:18\n- at 41:21\nIntLiteral(32768, None) at 41:22\n) at 41:27\nreturn at 41:29\nIntLiteral(5, None) at 41:36\n; at 41:37\nif at 42:5\n( at 42:8\nIntLiteral(32767, None) at 42:9\n!= at 42:15\nIntLiteral(32767, None) at 42:18\n) at 42:23\nreturn at 42:25\nIntLiteral(6, None) at 42:32\n; at 42:33\nif at 43:5\n( at 43:8\nIntLiteral(65535, None) at 43:9\n!= at 43:15\nIntLiteral(65535, None) at 43:18\n) at 43:23\nreturn at 43:25\nIntLiteral(7, None) at 43:32\n; at 43:33\nif at 46:5\n( at 46:8\n( at 46:9\n- at 46:10\nIntLiteral(2147483648, None) at 46:11\n) at 46:21\n!= at 46:23\n- at 46:26\nIntLiteral(2147483648, None) at 46:27\n) at 46:37\nreturn at 46:39\nIntLiteral(8, None) at 46:46\n; at 46:47\nif at 47:5\n( at 47:8\nIntLiteral(2147483647, None) at 47:9\n!= at 47:20\nIntLiteral(2147483647, None) at 47:23\n) at 47:33\nreturn at 47:35\nIntLiteral(9, None) at 47:42\n; at 47:43\nint at 50:5\nIdentifier(x) at 50:9\n= at 50:11\nIntLiteral(2147483647, None) at 50:13\n; at 50:23\nif at 51:5\n( at 51:8\nIdentifier(x) at 51:9\n!= at 51:11\nIntLiteral(2147483647, None) at 51:14\n) at 51:24\nreturn at 51:26\nIntLiteral(10, None) at 51:33\n; at 51:35\nunsigned at 53:5\nint at 53:14\nIdentifier(y) at 53:18\n= at 53:20\nIntLiteral(4294967295, Unsigned) at 53:22\n; at 53:33\nif at 54:5\n( at 54:8\nIdentifier(y) at 54:9\n< at 54:11\nIntLiteral(4000000000, None) at 54:13\n) at 54:23\nreturn at 54:25\nIntLiteral(11, None) at 54:32\n; at 54:34\nreturn at 56:5\nIntLiteral(0, None) at 56:12\n; at 56:13\n} at 57:1\nEOF at 58:1\n"
stderr: ""
status: 0
