tests/snapshots/tokenize__line_continuation.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nint at 10:5\nIdentifier(x) at 10:9\n= at 10:11\nIntLiteral(10, None) at 10:13\n+ at 10:16\nIntLiteral(20, None) at 10:22\n+ at 10:25\nIntLiteral(30, None) at 10:31\n; at 10:33\nint at 11:5\nIdentifier(y) at 11:9\n= at 11:11\n( at 11:13\n( at 11:14\nIntLiteral(5, None) at 11:15\n) at 11:16\n> at 11:18\n( at 11:20\nIntLiteral(10, None) at 11:21\n) at 11:23\n? at 11:25\n( at 11:32\nIntLiteral(5, None) at 11:33\n) at 11:34\n: at 11:36\n( at 11:43\nIntLiteral(10, None) at 11:44\n) at 11:46\n) at 11:47\n; at 11:48\nint at 14:5\nIdentifier(z) at 14:9\n= at 14:11\nIntLiteral(1, None) at 14:13\n+ at 14:15\nIntLiteral(2, None) at 14:29\n+ at 14:31\nIntLiteral(3, None) at 14:45\n; at 14:46\nreturn at 16:5\nIdentifier(x) at 16:12\n+ at 16:14\nIdentifier(y) at 16:16\n+ at 16:18\nIdentifier(z) at 16:20\n; at 16:21\n} at 17:1\nEOF at 18:1\n"
stderr: ""
status: 0
