tests/snapshots/tokenize__literal_suffixes.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nint at 5:5\nIdentifier(a) at 5:9\n= at 5:11\nIntLiteral(42, None) at 5:13\n; at 5:15\nint at 6:5\nIdentifier(b) at 6:9\n= at 6:11\nIntLiteral(42, Unsigned) at 6:13\n; at 6:16\nint at 7:5\nIdentifier(c) at 7:9\n= at 7:11\nIntLiteral(42, Long) at 7:13\n; at 7:16\nint at 8:5\nIdentifier(d) at 8:9\n= at 8:11\nIntLiteral(42, UnsignedLong) at 8:13\n; at 8:17\nint at 9:5\nIdentifier(e) at 9:9\n= at 9:11\nIntLiteral(42, UnsignedLong) at 9:13\n; at 9:17\nint at 10:5\nIdentifier(f) at 10:9\n= at 10:11\nIntLiteral(42, UnsignedLong) at 10:13\n; at 10:17\nfloat at 13:5\nIdentifier(x) at 13:11\n= at 13:13\nFloatLiteral(3.14, None) at 13:15\n; at 13:19\nfloat at 14:5\nIdentifier(y) at 14:11\n= at 14:13\nFloatLiteral(3.14, Float) at 14:15\n; at 14:20\nfloat at 15:5\nIdentifier(z) at 15:11\n= at 15:13\nFloatLiteral(3.14, Float) at 15:15\n; at 15:20\nfloat at 18:5\nIdentifier(s1) at 18:11\n= at 18:14\nFloatLiteral(15000000000, None) at 18:16\n; at 18:22\nfloat at 19:5\nIdentifier(s2) at 19:11\n= at 19:14\nFloatLiteral(15000000000, Float) at 19:16\n; at 19:23\nif at 22:5\n( at 22:8\nIdentifier(a) at 22:9\n!= at 22:11\nIntLiteral(42, None) at 22:14\n) at 22:16\nreturn at 22:18\nIntLiteral(1, None) at 22:25\n; at 22:26\nif at 23:5\n( at 23:8\nIdentifier(b) at 23:9\n!= at 23:11\nIntLiteral(42, None) at 23:14\n) at 23:16\nreturn at 23:18\nIntLiteral(2, None) at 23:25\n; at 23:26\nif at 24:5\n( at 24:8\nIdentifier(c) at 24:9\n!= at 24:11\nIntLiteral(42, None) at 24:14\n) at 24:16\nreturn at 24:18\nIntLiteral(3, None) at 24:25\n; at 24:26\nif at 25:5\n( at 25:8\nIdentifier(d) at 25:9\n!= at 25:11\nIntLiteral(42, None) at 25:14\n) at 25:16\nreturn at 25:18\nIntLiteral(4, None) at 25:25\n; at 25:26\nreturn at 27:5\nIntLiteral(0, None) at 27:12\n; at 27:13\n} at 28:1\nEOF at 29:1\n"
stderr: ""
status: 0
